# vykaz-util

./: .gitignore  SPEC.MD  next.config.js  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: tauri-build.yml
public/: template.xlsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: calendar.rs  file_ops.rs  mod.rs  pdf_export.rs
src/app/: layout.tsx  page.tsx
src/app/api/convert-pdf/: route.ts
src/components/: CalendarImport.tsx  DeepLinkHandler.tsx  DownloadApp.tsx  ExportButtons.tsx  MonthSelector.tsx  ReleaseNotes.tsx  Summary.tsx  TimesheetTable.tsx  UpdateChecker.tsx  UserSettings.tsx  WorkScheduleSettings.tsx
src/components/ui/: time-input.tsx
src/hooks/: usePlatform.ts
src/lib/: export.ts  holidays.ts  openExternal.ts  tauri.ts
src/store/: timesheet-store.ts
src/types/: index.ts
